# VMCore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.ccls-cache/@@home@ysl@Code@VMCore/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@dlfcn.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@mman-linux.h.blob  @usr@include@bits@mman-map-flags-generic.h.blob  @usr@include@bits@mman-shared.h.blob  @usr@include@bits@mman.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@posix2_lim.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  (+333 more)
.ccls-cache/@home@ysl@Code@VMCore/: build@external@VMUtils@include@VMUtils@attributes.hpp.blob  build@external@VMUtils@include@VMUtils@bomb.hpp.blob  build@external@VMUtils@include@VMUtils@common.h.blob  build@external@VMUtils@include@VMUtils@concepts.hpp.blob  build@external@VMUtils@include@VMUtils@fmt.hpp.blob  build@external@VMUtils@include@VMUtils@ieverything.hpp.blob  build@external@VMUtils@include@VMUtils@json_binding.hpp.blob  build@external@VMUtils@include@VMUtils@log.hpp.blob  build@external@VMUtils@include@VMUtils@modules.hpp.blob  build@external@VMUtils@include@VMUtils@nlohmann@json.hpp.blob  build@external@VMUtils@include@VMUtils@nonnull.hpp.blob  build@external@VMUtils@include@VMUtils@option.hpp.blob  build@external@VMUtils@include@VMUtils@ref.hpp.blob  build@external@VMUtils@include@VMUtils@version.hpp.blob  build@external@VMUtils@include@VMUtils@vmnew.hpp.blob  build@external@VMat@include@VMat@arithmetic.h  build@external@VMat@include@VMat@arithmetic.h.blob  build@external@VMat@include@VMat@geometry.h  build@external@VMat@include@VMat@geometry.h.blob  build@external@VMat@include@VMat@numeric.h  build@external@VMat@include@VMat@numeric.h.blob  build@external@VMat@include@VMat@transformation.h  build@external@VMat@include@VMat@transformation.h.blob  build@external@VMat@include@VMat@vmattype.h  build@external@VMat@include@VMat@vmattype.h.blob  extension@VMCoreExtension@i3dblockfileplugininterface.h.blob  extension@VMCoreExtension@ifile.h.blob  extension@VMCoreExtension@ifilemappingplugininterface.h.blob  extension@VMCoreExtension@ipagefile.h.blob  extension@VMCoreExtension@plugin.h.blob  extension@VMCoreExtension@plugindef.h.blob  external@3rdparty@rapidjson@allocators.h.blob  external@3rdparty@rapidjson@document.h.blob  external@3rdparty@rapidjson@encodedstream.h.blob  external@3rdparty@rapidjson@encodings.h.blob  external@3rdparty@rapidjson@error@error.h.blob  external@3rdparty@rapidjson@internal@biginteger.h.blob  external@3rdparty@rapidjson@internal@diyfp.h.blob  external@3rdparty@rapidjson@internal@ieee754.h.blob  external@3rdparty@rapidjson@internal@meta.h.blob  (+103 more)
.clangd/index/: __locale_t.h.3F73A78C1398A1A9.idx  __stddef_max_align_t.h.684618186FE9209C.idx  algorithm.C0A1DC3220927F4D.idx  algorithmfwd.h.3982530B2A178240.idx  algorithmfwd.h.6679E05849D5F54B.idx  aligned_buffer.h.54B510892B87C25E.idx  aligned_buffer.h.71981803BCD748C1.idx  alloc_traits.h.185D1CD5B7463772.idx  alloc_traits.h.1E77E30CE77E9D64.idx  alloc_traits.h.B03F3D3E892D0E87.idx  alloc_traits.h.C0A3618C1F3CB235.idx  allocated_ptr.h.7E5E6A3C862A835E.idx  allocated_ptr.h.DD7D8CF19110BD90.idx  allocator.h.DE4BC45990EF5147.idx  allocator.h.E8EEA51D4415153A.idx  allocators.h.E918C9BAE50F21CA.idx  appearance.cpp.2A142A728A8D1BAA.idx  appearance.h.1B8E1070AE18D598.idx  arcball.cpp.896B3AE0586223A3.idx  arcball.h.12794D57E1C802E9.idx  arithmetic.h.4C0DB08AC67F8A22.idx  array.184C87D15D602F82.idx  array.D300F9F48C4F8264.idx  assertions.h.E025D95A05F304A4.idx  atomic.683D4C289775670C.idx  atomic.7DBD9C49A8EF19A2.idx  atomic_base.h.43194A004E063A0A.idx  atomic_base.h.5F0416531D51ED60.idx  atomic_futex.h.615872BC786CCCD4.idx  atomic_futex.h.94AB3B6463F58F34.idx  atomic_lockfree_defines.h.BB2682E70947AC29.idx  atomic_word.h.339151394C11D9DB.idx  atomicity.h.4B4339D96DF0B96E.idx  attributes.hpp.323BED07F23FB385.idx  auto_ptr.h.098CF21651CDF6F6.idx  auto_ptr.h.91F78224E197DD17.idx  basic_file.h.04F0D1F63D8B14E8.idx  basic_file.h.97D921AAA0DAA27E.idx  basic_ios.h.AADA7DEA118B733F.idx  basic_ios.h.E787F594E12D0874.idx  (+518 more)
benchmark/: CMakeLists.txt  benchmark_block3dcache.cpp
extension/VMCoreExtension/: i3dblockfileplugininterface.h  ifile.h  ifilemappingplugininterface.h  ipagefile.h  plugin.h  plugindef.h
include/VMFoundation/: blockarray.h  blockedgridvolumefile.h  buffer.h  cachepolicy.h  countedobject.h  dataarena.h  filemappingplugininterface.h  foundation_config.h  genericcache.h  global.h  gridvolumefile.h  image.h  largevolumecache.h  library.h  (+20 more)
src/: error.cc  library.cc
test/: CMakeLists.txt  common.cpp  common.h  test.cpp  test_blockedgridvolumefile.cpp  test_cachepolicy.cpp  test_color_interpulator.cpp  test_filemapping.cpp  test_logger.cpp  test_lvdrw.cpp  test_memory.cpp  test_rawreader.cpp  test_rawstream.cpp
vmutils/: basetype.h  common.h  errors.h  geometry.h  numeric.h  objectfactory.h  threadpool.h  timer.h
(+174 files in other folders)
